# SluiceGate

./: .gitignore  README.md  pyproject.toml  sluice_gate_ai_agent_instructions.md
.devcontainer/: devcontainer.json
sluice_sim/: __init__.py
sluice_sim/controllers/: autotune.py  pid_pulse.py
sluice_sim/models/: plant.py
sluice_sim/profiles/: inflow.py
sluice_sim/sim/: simulator.py
sluice_sim/tests/: test_controller.py  test_inflow.py  test_plant.py  test_simulator.py
sluice_sim/ui/: app.py
