[project]
name = "sluicegate"
version = "0.1.0"
description = "Sluice Gate Level Control Simulator"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sluice_sim"]
